--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,8 @@
 
 }
 
+
+/* Default styles for all sizes */
 body {
     background-color: var(--primary);
     display: flex;
@@ -42,7 +44,7 @@ main {
 
 .text-input-task-container {
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     align-items: center;
     border: 2px solid var(--accent);
     border-radius: 15px;
@@ -56,7 +58,8 @@ main {
     border: none;
     flex-grow: 1;
     font-size: 1em;
-    margin: 0 0.9em;
+    width: 70%;
+    /* margin: 0 0.9em; */
     accent-color: var(--accent);
     outline: none;
 }
@@ -68,18 +71,15 @@ main {
     color: var(--primary);
     padding: 0 1em;
     font-size: 0.9em;
-    padding: 0.2em 1em  0.2em 0.8wwem;
+    padding: 0.2em 1em  0.2em 0.8em;
     display: flex;
     align-items: center;
     border: none;
     height: 100%;
 }
 
-@media screen and (max-width: 1800px) {
-    .btn-add-task span, .task-option-edit span, .task-option-delete span {
-        display: none;
-    }
-}
+
+
 
 .btn-add-task > i[data-lucide] {
     width: 16px;
@@ -273,3 +273,33 @@ i[data-lucide] {
     color: var(--color);
     border: 1px solid var(--color);
 }
+
+
+/* Style for mobile devices */
+@media (max-width: 480px) {
+
+    .btn-add-task span, .task-option-edit span, .task-option-delete span {
+        display: none;
+    }
+}
+
+/* Style for tablet */
+@media (min-width: 481px) and (max-width: 768px) {
+
+    .btn-add-task span, .task-option-edit span, .task-option-delete span {
+        display: none;
+    }
+}
+
+/* Style for desktop */
+@media (min-width: 769px) {
+    .btn-add-task span, .task-option-edit span, .task-option-delete span {
+        display: none;
+    }
+}
+
+/* @media screen and (max-width: 1800px) {
+    .btn-add-task span, .task-option-edit span, .task-option-delete span {
+        display: none;
+    }
+} */
